  (Gabriel Scherer and Armaël Guéneau,
   review by Valentin Gatien-Baron and Damien Doligez)

- GPR#1519, GPR#1532, GRP#1570: migrate tests to ocamltest
  (Sébastien Hinderer, review by Gabriel Scherer, Valentin Gatien-Baron
  and Nicolás Ojeda Bär)

- GPR#1520: more robust implementation of Misc.no_overflow_mul
  (Max Mouratov, review by Xavier Leroy)

- GPR#1586: testsuite: 'make promote' for ocamltest tests
  (The new "-promote" option for ocamltest is experimental
  and subject to change/removal).
  (Gabriel Scherer)

### Bug fixes

- MPR#5250, GPR#1435: on Cygwin, when ocamlrun searches the path
  for a bytecode executable file, skip directories and other
  non-regular files, like other Unix variants do.
  (Xavier Leroy)

- MPR#6394, GPR#1425: fix fatal_error from Parmatch.get_type_path
  (Virgile Prevosto, review by David Allsopp, Thomas Refis and Jacques Garrigue)

* MPR#6604, GPR#931: Only allow directives with filename and at the beginning of
  the line
  (Tadeu Zagallo, report by Roberto Di Cosmo,
   review by Hongbo Zhang, David Allsopp, Gabriel Scherer, Xavier Leroy)

- PR#7660, GPR#1445: Use native Windows API to implement Unix.utimes in order to
  avoid unintended shifts of the argument timestamp depending on DST setting.
  (Nicolás Ojeda Bär, review by David Allsopp, Xavier Leroy)

- MPR#7668: -principal is broken with polymorphic variants
  (Jacques Garrigue, report by Jun Furuse)

- MPR#7680, GPR#1497: Incorrect interaction between Matching.for_let and
  Simplif.simplify_exits
  (Alain Frisch, report and review by Vincent Laviron)

- MPR#7682, GPR#1495: fix [@@unboxed] for records with 1 polymorphic field
  (Alain Frisch, report by Stéphane Graham-Lengrand, review by Gabriel Scherer)

- MPR#7695, GPR#1541: Fatal error: exception Ctype.Unify(_) with field override
  (Jacques Garrigue, report by Nicolás Ojeda Bär)

- MPR#7711, GPR#1581: Internal typechecker error triggered by a constraint on
   self type in a class type